--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-under construction
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link href="styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <h1>DUBIOUS DOGGO</h1>
+
+    <h2>A collection of things I've created</h2>
+    
+    <h3>5.26.2025</h3>
+    <p>
+        So, here we are;
+        swirling around this great big soup.
+        the soup of the universe; universe soup.
+        The date is 5.26.12025, A.D. -----<br />
+        A lot has changed in the last 10000 years.
+        by my estimate, an exponential amount of things.
+        I work in the coal mines of "Earth 2.0", to use a 2000's-ism
+        tonight when I got off my shift I went up on over to BigHill for a dusting,
+        got my suit all nice and clean. hacked out a lung too in their clean air
+        box before smoking a bowl to clear my head - guess <i>some</i> things never change.
+    </p>
+    </div>
+</body>
+
+</html>
