--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,16 @@
         they are birdoids.<br>
         watch them fly.<br>
     </p>
-    <p>TODO: EMBED EMSCRIPTEN HERE</p>
+    
+    <h4>TODO</h4>
+    <ul>
+        <li><s>GET EMSCRIPTEN</s></li>
+        <li>COMPILE SDL2 PROJECTS TO WASM</li>
+        <li>EMBED PROJECTS IN PROJECTS.HTML</li>
+        <li>BUILD PIPELINE?</li>
+    </ul>
+    </div>
+    
 </body>
 
 </html>
