--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,15 @@
         watch them fly.<br>
     </p>
     
+    <a href="./projects/boids/boids.html">fly away</a>
+
     <h4>TODO</h4>
     <ul>
-        <li><s>GET EMSCRIPTEN</s></li>
-        <li>COMPILE SDL2 PROJECTS TO WASM</li>
-        <li>EMBED PROJECTS IN PROJECTS.HTML</li>
-        <li>BUILD PIPELINE?</li>
+        <li><s>INSTALL EMSCRIPTEN</s></li>
+        <li><s>COMPILE SDL2 PROJECTS TO WASM</s></li>
+        <li>FIGURE OUT WHY ITS BROKEN</li>
+        <li>EMBED PROJECTS DIRECTLY IN PROJECTS.HTML</li>
+        <li>FULL BUILD PIPELINE</li>
     </ul>
     </div>
     
