killed the pentapods, boss

--- a/index.html
+++ b/index.html
@@ -155,6 +155,46 @@
         </pre>
 
     </div>
+	
+	<hr>
+	
+	<h4>7/2/25</h4>
+    <div class="report">
+        <pre>
+        REPORT FROM GLEBA
+		
+		The pentapod colony nearest to FT. JELLYNUT has been terminated. The 
+		cannon shells provided from NAVIUS proved most useful in this endevour.
+		Permanent autonomous defenses will need to be constructed before GLEBA 
+		can be left without supervision.
+		
+		Work on spacefligt from GLEBA continues. Production of engine units at
+		FT. JELLYNUT has begun, and bio-lubricant processing has begun at YUMAKO
+		CITY. Due to the iron demand of the engine units, iron smelting facilities
+		have been expanded. However, iron production is now bottlenecked by iron
+		bacteria cultivation, in part due to lack of fresh nutrients on site at
+		FT. JELLYNUT. As such, a new bacteria cultivation center is being constructed
+		in YUMAKO CITY. 
+		
+		Two new rail stations are under construction at YUMAKO CITY, one for export
+		of iron ore and bacteria, and one for lubricant in preparation for electric
+		engine production at FT. JELLYNUT.
+        
+        END TRANSMISSION
+
+        BEGIN ATTACHMENTS
+        <img src="images/pentapod-recon.png" width="500" />
+            Reconnaissance photograph of the local pentapod colony
+
+        <img src="images/bio-lube.png" width="500" />
+            Bio lubricant facility
+
+        END ATTACHMENTS
+
+        </pre>
+
+    </div>
+	
 
 
 </body>
