web update for boids, reorganize

--- a/projects.html
+++ b/projects.html
@@ -18,20 +18,18 @@
         these are my children.<br>
         they are birdoids.<br>
         watch them fly.<br>
+        <a href="./projects/boids/wasm/boids.html">fly away</a>
     </p>
     
-    <a href="./projects/boids/boids.html">fly away</a>
-
     <h4>TODO</h4>
     <ul>
         <li><s>INSTALL EMSCRIPTEN</s></li>
         <li><s>COMPILE SDL2 PROJECTS TO WASM</s></li>
-        <li>FIGURE OUT WHY ITS BROKEN</li>
+        <li><s>FIGURE OUT WHY ITS BROKEN</s></li>
         <li>EMBED PROJECTS DIRECTLY IN PROJECTS.HTML</li>
         <li>FULL BUILD PIPELINE</li>
     </ul>
-    </div>
-    
+
 </body>
 
 </html>
